@@ -1,3 +1,8 @@
+2007-10-22  Henry Proudhon  <henry.proudhon@insa-lyon.fr>
+
+	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
+	(getClip): Implemented.
+
 2007-10-17  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* experimental/org/jfree/experimental/chart/plot/dial/AbstractDialLayer.java
